--- a/src/app/views/app/about/about.component.html
+++ b/src/app/views/app/about/about.component.html
@@ -26,9 +26,9 @@
           
 
           <li class="nav-item">
-              <a id="app_mobile" href="javascript:;">
-                Contact Us
-              </a>
+            <a [attr.href]="WEBSITE_URL + 'app/contact'" id="app_mobile">
+              Contact Us
+          </a>
           </li>
 
 
